<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:visible="true" />
        <item
            android:id="@+id/nav_character"
            android:title="@string/character"
            android:visible="false" />
        <item
            android:id="@+id/nav_server_status"
            android:title="@string/server_status" />
        <item
            android:id="@+id/nav_quaggans"
            android:title="@string/quaggans" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_quit"
                android:title="@string/quit" />
        </menu>
    </item>

</menu>
