<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.huhx0015.gw2at.viewmodels.fragments.LoginFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loginContainerVisible ? View.VISIBLE : View.GONE}">

                <android.support.v7.widget.CardView
                    android:id="@+id/login_description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="2dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/login_description_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/login_description"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/login_api_key_field_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_description_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:padding="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_api_key_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="24"
                            android:hint="@string/login_api_key_field"
                            android:inputType="textCapCharacters"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_below="@+id/login_api_key_field_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_orange_button"
                    android:onClick="@{viewModel.onClickLoginButton}"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    app:elevation="2dp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>